<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tv_titleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_textview_20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/bg_search"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleHome" />

    <TextView
        android:id="@+id/tv_recent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_textsize_14sp"
        app:layout_constraintTop_toBottomOf="@+id/sv_Search" />

    <ProgressBar
        android:id="@+id/pro_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/re_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_recent" />

</androidx.constraintlayout.widget.ConstraintLayout>